fix the rtl alignment of keyboard button
Former-commit-id: e07e90648f8f8f96c6c34c3a383141f3b1e70c64

--- a/src/alfanous-django/wui/static/shared/css/style.css
+++ b/src/alfanous-django/wui/static/shared/css/style.css
@@ -164,12 +164,6 @@ table th.text-center {
   position: relative;
 }
 
-@media (max-width: 767px) {
-  .keyboardInputInitiator{
-    right: 40px;
-  }
-}
-
 
 
 /* Assem: Terms Static Highlighting colors */
